fix: hide horizontal scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,12 @@ body,
   max-width: 100%;
   overflow-x: hidden;
 }
+html::-webkit-scrollbar:horizontal,
+body::-webkit-scrollbar:horizontal,
+#root::-webkit-scrollbar:horizontal {
+  display: none;
+  height: 0;
+}
 * {
   box-sizing: border-box;
 }
